workloads/torrserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torrserver
  namespace: torrserver
spec:
  type: ClusterIP
  selector:
    app: torrserver
  ports:
    - port: 8090
      targetPort: 8090
