workloads/torrserver/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: torrserver-route
  namespace: torrserver
spec:
  parentRefs:
  - name: cilium
    namespace: default
    sectionName: http
  hostnames:
  - "torrserver.cluster.home"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: torrserver
      port: 8090
